Changes Done for both frontend and backend for medication plus follow up page